--- a/static/main.css
+++ b/static/main.css
@@ -27,7 +27,9 @@ body {
 }
 
 .nav-link:hover {
-    color: #610556
+    
+    color: rgb(218, 218, 218);
+    transition: 0.1s;
 }
 
 .nav-btn {
@@ -40,6 +42,13 @@ body {
     background: #610556;
     color: white !important;
     transition: 1s;
+}
+
+.btn:hover {
+    background-color: white !important;
+    color: black !important;
+    border: 1px solid #610556;
+    transition: 0.5s;
 }
 
 .kontakt-button {
@@ -74,7 +83,8 @@ body {
 
 .navbar.navbar-solid .navbar-brand:hover,
 .navbar.navbar-solid .nav-link:hover {
-    color: black;
+    color:#610556;
+    transition: 0.1s;
 }
 
 .navbar-nav {
@@ -82,6 +92,10 @@ body {
     justify-content: start;
 }
 
+.navbar-brand img {
+    height: 20px;
+
+}
 /* Desktop-CSS  */
 
 .p-text {
@@ -140,6 +154,8 @@ body {
     height: 300px;
     text-align: center;
     border-radius: 5px;
+    color: black !important;
+    text-decoration: none;
 }
 
 
@@ -278,16 +294,105 @@ footer {
 }
 
 .icon-footer-div {
-    width: 50%;
+    width: 100%;
     height: 100%;
+    text-align: left;
 }
 
 .icon-footer-div img {
-    height: 100%;
-    width: 100%;
+    height: 40px;
+    width: auto;
     object-fit: contain;
 }
+.soc {
+    margin-top: 30px;
+    display: block;
+    list-style: none;
+    text-align: left;
+  }
+  .soc li {
+    display: inline-block;
+  }
+  .soc a, .soc svg {
+    display: block;
+  }
+  .soc a {
+    display: inline-block;
+    position: relative;
+    height: 30px;
+    width: 30px;
+  }
+  .soc svg {
+    height: 100%;
+    width: 100%;
+  }
+  
+  .icon {
+    background: black;
+    border-radius: 100%;
+    color: white;
+    fill: white;
+  }
+  .icon:hover {
+    background: white;
+    color: black;
+    fill: black;
+  }
+  
+  .facebook:hover {
+    color: #3B579D;
+    fill: #3B579D;
+  }
+  
+  .linkedin:hover {
+    color: #007BB6;
+    fill: #007BB6;
+  }
+  
+  .footer-list a{
+    text-decoration: none;
+    font-size: large;
+  }
 
+  .link-footer:hover {
+    font-weight:lighter;
+    transition: 0.1s;
+  }
+
+  /* Effects */
+  @-webkit-keyframes fade {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  @-moz-keyframes fade {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  @-o-keyframes fade {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  @keyframes fade {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+  }
+.animation {
+    animation-name: fade;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+}
+
+.reveal{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 1s all ease;
+  }
+  
+  .reveal.active{
+    transform: translateY(0);
+    opacity: 1;
+  }
 
 /* Nebenseiten CSS */
 
