Änderungen von Aykut

--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: handwrittenFont;
+    src: url("Bitcheese.ttf");
+  }
+
 body {
     letter-spacing: 0px;
     max-width: 100%;
