--- a/static/main.css
+++ b/static/main.css
@@ -567,4 +567,13 @@ footer {
 }
 
 
-
+.cloud {
+    background: #fff;
+    border-radius: 50%;
+    width: 340px;
+    height: 145px;
+    position: relative;
+    text-align: center;
+    padding: 20px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
